# msadapt_pqanns

./: CMakeLists.txt  README.md  loadFactorExploration.sh  manyBOFLoadFactorExploration.sh  manyConfigLoadFactorExploration.sh  run.sh  run_psc.sh
include/: Buffer.h  Constants.h  Environment.h  Worker.h
include/comm/: MpiCommunicator.h
include/controller/: QPMonitor.h  SCSignals.h  StreamController.h
include/reader/: Reader.h
include/temporal/: TemporalBuffer.h  TemporalIndex.h
include/utils/: Config.h  Data.h  IndexIO.h  Logger.h  Matrix.h  Time.h
include/utils/read/: ReadeIVF.h
include/workers/: Coordinator.h  IndexStreamer.h  MSTestInsertStreamer.h  MSTestQueryStreamer.h  QueryProcessor.h  QueryStreamer.h
lib/: faiss_20210615.tar.xz  faiss_new.tar.xz
lib/faiss/: IndexFlat.cpp  IndexFlat.h  IndexIVF.cpp  IndexIVF.h  depend
lib/faiss/demos/: demo_imi_flat  demo_imi_pq  demo_ivfpq_indexing  demo_ivfpq_indexing.cpp  demo_sift1M  demo_weighted_kmeans
lib/faiss/utils/: RWLock.h
src/: Environment.cpp  main.cpp
src/comm/: MpiCommunicator.cpp
src/controller/: QPMonitor.cpp  SCSignals.cpp  StreamController.cpp
src/reader/: Reader.cpp
src/temporal/: TemporalBuffer.cpp  TemporalIndex.cpp
src/utils/: Config.cpp  Data.cpp  IndexIO.cpp  Logger.cpp  Matrix.cpp  Time.cpp
src/utils/read/: ReadeIVF.cpp
src/workers/: Coordinator.cpp  IndexStreamer.cpp  MSTestInsertStreamer.cpp  MSTestQueryStreamer.cpp  QueryProcessor.cpp  QueryStreamer.cpp
src/workers/strategies/: IVFADCStrategie.cpp
